fix(CategoryPicker): Bad category alignemnt

--- a/web/src/components/Common/CategoryPicker/CategoryPicker.module.scss
+++ b/web/src/components/Common/CategoryPicker/CategoryPicker.module.scss
@@ -4,7 +4,7 @@
 .CategoryPicker {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .Toggle {
